Fix 8px gap at the bottom of desktop UI

--- a/src/components/page.less
+++ b/src/components/page.less
@@ -90,7 +90,7 @@ main {
       height: 100vh;
     }
     &.tab {
-      margin-top: 0;
+      margin: 0;
     }
   }
 }
